fixed spacing on table

--- a/servers/website/public/less/modal/index.less
+++ b/servers/website/public/less/modal/index.less
@@ -84,10 +84,6 @@ footer {
           border-bottom: solid 1px #EDF1F5;
         }
         
-        tr td, tr th {    
-          width: 20%;
-        }
-        
         td {
           font-size: 0.95em;
           padding: 12px 8px;
